--- a/assets/css/zp.css
+++ b/assets/css/zp.css
@@ -39,24 +39,17 @@
 	font-family: Arial,Helvetica,sans-serif;
 	font-size: 1em;
 }
-
 #zp-form-wrap h2,
 #zp-form-wrap .zp-form {
     max-width: 500px;
     margin-left: auto;
     margin-right: auto;
 }
-
 .zp-form #hour,
 .zp-form #month,
 .zp-form #day {
 	margin-right:.6em;
 }
-
-#zp-ajax-birth-data label#citylabel {
-	display:block;
-}
-
 #zp-birthreport-form #place,
 #zp-birthreport-form .zp-input-text {
  	width: 100%;
@@ -118,23 +111,13 @@ form .zp-button:hover, .zp-button:focus{
 
 /* Ajax
 -------------------------------------------------------------- */
-
-#zp-ajax-birth-data #zp-coordinates {
-	margin:14px 0;
-	
-}
-
 #zp-fetch-birthreport,
 #zp-report-wrap,
-#zp-coordinates,
 #zp-offset-wrap,
 #zp-form-tip{
 	display:none;
 }
 
-#zp-coordinates label,
-#zp-coordinates span,
-#zp-coordinates input,
 #zp-offset-label,
 #zp-offset-wrap #zp_offset_geo {
 	background-color:transparent;
@@ -145,14 +128,11 @@ form .zp-button:hover, .zp-button:focus{
 	padding: 0;
 	line-height: 0.9;
 }
-#zp-lat-label, #zp-long-label, #zp-offset-label {
+#zp-offset-label {
 	display:inline;
 	float:left;
 	clear:left;
 }
-
-#zp_lat_decimal,
-#zp_long_decimal,
 #zp_offset_geo {
 	display:inline;
 	float:left;	
