--- a/assets/css/zp.css
+++ b/assets/css/zp.css
@@ -155,20 +155,35 @@ form .zp-button:hover, .zp-button:focus{
 .zp-report-backlink {
 	text-align: right;
 }
+
 .zp-report-header,
-.zp-report-caption{
+.zp-report-caption {
 	border: 1px solid #dddddd;
 	background: #e9e9e9;
-	padding:10px;
-	max-width: 550px;
-	margin: 0 auto;
+	text-align: left;
+	line-height: 1.4;
+	font-weight: 700;
+	padding: 4px 10px;
 }
 .zp-report-header {
+	max-width: 575px;
+	margin: 0;
 	font-size:0.8em;
-	margin:0;
+	border-collapse: collapse;
+	table-layout: fixed;
 }
-.zp-report-header p {
+.zp-mobile-wrap {
+	display:inline;
 	margin:0;
+	padding:0;
+}	
+.zp-report-header td {
+	padding: 0 10px;
+	border:0;
+	white-space: nowrap;
+}
+.zp-report-header tr:last-child td {
+	padding-bottom:5px;
 }
 .zp-zodiacal-dms {
 	font-weight: 400;padding-left:1em;font-size:.9em;
@@ -177,8 +192,10 @@ form .zp-button:hover, .zp-button:focus{
 .zp-subheading {
 	font-weight: bold;
 }
-.zp-report-section-title{
-	padding:2em 0;font-weight:bold;
+h3.zp-report-section-title{
+	padding:2em 0;
+	font-weight:bold;
+	margin:0.3em 0;
 }
 .zp-orb{
 	font-weight: 400;font-style: italic;font-size:.9em;
@@ -581,5 +598,11 @@ form .zp-button:hover, .zp-button:focus{
 	}
 	#zp-birthreport-form .zp-input-text-wrap {
 		padding:7px 0 0;
+	}
+	.zp-report-header {
+		max-width: 100%;
+	}
+	.zp-mobile-wrap {
+		display: block;
 	}
 }
