--- a/assets/css/zp.css
+++ b/assets/css/zp.css
@@ -165,15 +165,17 @@ form .zp-button:hover, .zp-button:focus{
 .zp-report-backlink {
 	text-align: right;
 }
-
 .zp-report-header,
 .zp-report-caption {
-	border: 1px solid #dddddd;
+  border: 1px solid #dddddd;
 	background: #e9e9e9;
 	text-align: left;
 	line-height: 1.4;
-	font-weight: 700;
 	padding: 4px 10px;
+}
+.zp-report-caption {
+	font-weight: 700;
+	border-bottom-width: 0;
 }
 .zp-report-header {
 	max-width: 575px;
@@ -181,6 +183,7 @@ form .zp-button:hover, .zp-button:focus{
 	font-size:0.8em;
 	border-collapse: collapse;
 	table-layout: fixed;
+	border-top-width: 0;
 }
 .zp-mobile-wrap {
 	display:inline;
