--- a/assets/css/zp.css
+++ b/assets/css/zp.css
@@ -117,7 +117,11 @@ form .zp-button:hover, .zp-button:focus{
 	margin: 24px 0 36px;
 	width:100%;
 }
-
+#zp-fetch-birthreport[disabled],#zp-fetch-offset[disabled] {
+	cursor: default;
+	cursor: not-allowed;
+	opacity: .5;
+}
 
 /* Ajax
 -------------------------------------------------------------- */
